[package]
name = "line_bot_sdk_rust"
version = "0.1.0"
authors = ["turkeyzawa <18262943+turkeyzawa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
futures = "0.1.29"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
tokio = "0.1.22"
actix-web = "1.0.8"
actix = "0.8.3"
